--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <aspectjweaver.version>1.9.6</aspectjweaver.version>
   </properties>
 
+  
+
   <distributionManagement>
     <repository>
         <id>github</id>
@@ -82,6 +84,21 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
         <version>6.2.5</version>
+    </dependency>
+
+
+     <!-- SLF4J API -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>2.0.9</version>
+    </dependency>
+
+    <!-- SLF4J implementation (e.g., Logback) -->
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.4.14</version>
     </dependency>
 
 
