--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
         <version>1.18.36</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.24.3</version>
+    </dependency>
+
 
 
     <!-- JUnit 5 API and Engine -->
