--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <repository>
         <id>github</id>
         <name>ObaidDev</name>
-        <url>https://maven.pkg.github.com/ObaidDev/trackswiftly_utils</url>
+        <url>https://maven.pkg.github.com/ObaidDev/trackswiftly.utils</url>
     </repository>
   </distributionManagement>
 
