Enhance documentation and structure across multiple classes, adding detailed comments and descriptions for clarity and maintainability.

--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,38 @@
   <groupId>com.trackswiftly.utils</groupId>
   <artifactId>utils</artifactId>
   <version>1.0.7</version>
+  
 
-  <name>utils</name>
+  <name>my-utils</name>
+  <description>collocations of utils of trackswiftly</description>
+  <url>https://utils.trackswiftly.com/mywowpackage/docs</url>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+
+  <developers>
+    <developer>
+      <name>Obaid Dev</name>
+      <email>abdellatif.hour.web@gmail.com</email>
+      <url>https://trackswiftly.com</url>
+      <organization>trackswiftly</organization>
+      <organizationUrl>https://www.trackswiftly.com</organizationUrl>
+    </developer>
+  </developers>
+
+
+  <scm>
+    <connection>scm:git:git://github.com/ObaidDev/trackswiftly.utils.git</connection>
+    <developerConnection>scm:git:ssh://github.com:ObaidDev/trackswiftly.utils.git</developerConnection>
+    <url>https://github.com/ObaidDev/trackswiftly.utils/tree/main</url>
+  </scm>
+
+  
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -127,7 +157,116 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
         </plugin>
+
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.10.1</version> <!-- Check for latest version at Maven Central -->
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <!-- After maven-javadoc-plugin -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.3.1</version>  <!-- Check for latest version at Maven Central -->
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+
       </plugins>
     </pluginManagement>
   </build>
+
+
+  <profiles>
+    <profile>
+      <id>deployment</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.10.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.2.7</version><!-- Check for latest version at Maven Central -->
+            <configuration>
+              <!-- Optional: specify which key to use -->
+              <keyname>${gpg.keyname}</keyname>
+              <!-- Prevent gpg from using pinentry programs -->
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.sonatype.central</groupId>
+          <artifactId>central-publishing-maven-plugin</artifactId>
+          <version>0.6.0</version><!-- Check for latest version at Maven Central -->
+          <extensions>true</extensions>
+          <configuration>
+            <publishingServerId>central</publishingServerId>
+            <autoPublish>true</autoPublish>
+            <waitUntil>uploaded</waitUntil>
+          </configuration>
+        </plugin>
+
+        
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
+
 </project>
